# learn-mlir

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
lessons/: CMakeLists.txt
lessons/basics/ch0_setup/ch0-opt/: CMakeLists.txt  ch0-opt.cpp
lessons/basics/ch0_setup/ch0-translate/: ch0-translate.cpp
lessons/basics/ch0_setup/include/Ch0/: Ch0Dialect.h  Ch0Dialect.td
lessons/basics/ch0_setup/include/Ch0-c/: Dialects.h
lessons/basics/ch0_setup/lib/Ch0/: CMakeLists.txt
lessons/basics/ch0_setup/python/: CMakeLists.txt  Ch0Extension.cpp
lessons/basics/ch0_setup/test/: lit.cfg.py
lessons/basics/ch0_setup/test/CAPI/: CMakeLists.txt
lessons/basics/ch0_setup/test/Ch0/: ch0-opt.mlir  ch0-translate.mlir
lessons/basics/ch1_register_translation/: CMakeLists.txt
lessons/basics/ch1_register_translation/ch1-opt/: ch1-opt.cpp
lessons/basics/ch1_register_translation/ch1-translate/: ch1-translate.cpp
lessons/basics/ch1_register_translation/include/Ch1/: Ch1Dialect.td  Ch1Ops.td
lessons/basics/ch1_register_translation/include/Ch1-c/: Dialects.h
lessons/basics/ch1_register_translation/lib/CAPI/: CMakeLists.txt  Dialects.cpp
lessons/basics/ch1_register_translation/lib/Ch1/: CMakeLists.txt
lessons/basics/ch1_register_translation/python/: CMakeLists.txt
lessons/basics/ch1_register_translation/test/: CMakeLists.txt  lit.site.cfg.py.in
lessons/basics/ch1_register_translation/test/CAPI/: ch1-capi-test.c
lessons/basics/ch1_register_translation/test/Ch1/: ch1-opt.mlir  ch1-translate.mlir
lessons/ch0_setup/: CMakeLists.txt  README.md
lessons/ch0_setup/ch0-opt/: CMakeLists.txt  ch0-opt.cpp
lessons/ch0_setup/ch0-translate/: CMakeLists.txt  ch0-translate.cpp
lessons/ch0_setup/include/: CMakeLists.txt
lessons/ch0_setup/include/Ch0/: CMakeLists.txt  Ch0Dialect.td  Ch0Ops.h  Ch0Ops.td
lessons/ch0_setup/include/Ch0-c/: Dialects.h
lessons/ch0_setup/lib/: CMakeLists.txt
lessons/ch0_setup/lib/CAPI/: CMakeLists.txt  Dialects.cpp
lessons/ch0_setup/lib/Ch0/: Ch0Dialect.cpp  Ch0Ops.cpp
lessons/ch0_setup/python/: CMakeLists.txt  Ch0Extension.cpp
lessons/ch0_setup/python/mlir_ch0/dialects/: Ch0Ops.td  ch0.py
lessons/ch0_setup/test/: CMakeLists.txt  lit.site.cfg.py.in
lessons/ch0_setup/test/CAPI/: CMakeLists.txt  ch0-capi-test.c
lessons/ch0_setup/test/Ch0/: dummy.mlir
lessons/ch0_setup/test/python/: smoketest.py
lessons/ch1_register_translation/: CMakeLists.txt  README.md
lessons/ch1_register_translation/ch1-opt/: CMakeLists.txt
lessons/ch1_register_translation/ch1-translate/: CMakeLists.txt  ch1-translate.cpp
lessons/ch1_register_translation/include/: CMakeLists.txt
lessons/ch1_register_translation/include/Ch1/: Ch1Dialect.h  Ch1Dialect.td  Ch1Ops.h  Ch1Ops.td
lessons/ch1_register_translation/include/Ch1-c/: Dialects.h
lessons/ch1_register_translation/lib/Ch1/: Ch1Dialect.cpp
lessons/ch1_register_translation/python/: Ch1Extension.cpp
lessons/ch1_register_translation/test/: lit.cfg.py  lit.site.cfg.py.in
lessons/ch1_register_translation/test/CAPI/: CMakeLists.txt  ch1-capi-test.c
lessons/ch1_register_translation/test/python/: smoketest.py
lessons/ch1_setup/ch1-opt/: CMakeLists.txt  ch1-opt.cpp
lessons/ch1_setup/include/Ch1/: CMakeLists.txt  Ch1Dialect.h  Ch1Dialect.td  Ch1Ops.h  Ch1Ops.td
lessons/ch1_setup/include/Ch1-c/: Dialects.h
lessons/ch1_setup/lib/: CMakeLists.txt
lessons/ch1_setup/lib/Ch1/: Ch1Ops.cpp
lessons/ch1_setup/python/: CMakeLists.txt
lessons/ch1_setup/python/mlir_ch1/dialects/: Ch1Ops.td
lessons/ch1_setup/test/: CMakeLists.txt  lit.cfg.py
lessons/ch1_setup/test/Ch1/: dummy.mlir
lessons/example_toy/: CMakeLists.txt  README.md
lessons/example_toy/ch0/: CMakeLists.txt
lessons/example_toy/ch0/ch0toy/: CMakeLists.txt
lessons/example_toy/ch0/include/: CMakeLists.txt
lessons/example_toy/ch0/include/Ch0toy/: CMakeLists.txt  Ch0toyDialect.h  Ch0toyDialect.td  Ch0toyOps.h  Ch0toyOps.td
lessons/example_toy/ch0/include/Ch0toy-c/: Dialects.h
lessons/example_toy/ch0/lib/: CMakeLists.txt
lessons/example_toy/ch0/lib/CAPI/: CMakeLists.txt  Dialects.cpp
lessons/example_toy/ch0/lib/Ch0toy/: CMakeLists.txt  Ch0toyDialect.cpp  Ch0toyOps.cpp
lessons/example_toy/ch1/: CMakeLists.txt
lessons/example_toy/ch1/ch1toy/: CMakeLists.txt  ch1toy.cpp
lessons/example_toy/ch1/include/: CMakeLists.txt
lessons/example_toy/ch1/include/Ch1toy/: CMakeLists.txt  Ch1toyDialect.h  Ch1toyDialect.td  Ch1toyOps.h  Ch1toyOps.td
lessons/example_toy/ch1/include/Ch1toy-c/: Dialects.h
lessons/example_toy/ch1/lib/: CMakeLists.txt
lessons/example_toy/ch1/lib/CAPI/: CMakeLists.txt  Dialects.cpp
lessons/example_toy/ch1/lib/Ch1toy/: CMakeLists.txt  Ch1toyDialect.cpp  Ch1toyOps.cpp
lessons/example_toy/ch2/: CMakeLists.txt
lessons/example_toy/ch2/include/toy/: AST.h  CMakeLists.txt  Ch2ToyDialect.h  Ch2ToyDialect.td  Ch2ToyOps.h  Ch2ToyOps.td  ToyDialect.h  ToyDialect.td  ToyOps.h  ToyOps.td
lessons/example_toy/ch2/lib/CAPI/: CMakeLists.txt  Dialects.cpp
lessons/example_toy/ch2/lib/Toy/: CMakeLists.txt  Dialect.cpp  MLIRGen.cpp  ToyDialect.cpp  ToyOps.cpp
lessons/example_toy/ch2/toyc/: CMakeLists.txt  toyc.cpp
lessons/example_toy/ch3/: CMakeLists.txt  README.md
lessons/example_toy/ch3/include/toy/: CMakeLists.txt  Ch3ToyDialect.h  Ch3ToyDialect.td  Ch3ToyOps.h  Ch3ToyOps.td
lessons/example_toy/ch3/include/toy-c/: Dialects.h
lessons/example_toy/ch3/lib/CAPI/: CMakeLists.txt  Dialects.cpp
lessons/example_toy/ch3/lib/Toy/: CMakeLists.txt  Dialect.cpp  (+5 more)
lessons/example_toy/ch3/toyc/: CMakeLists.txt  toyc.cpp
lessons/example_toy/ch4/: CMakeLists.txt
lessons/example_toy/ch4/toyc/: CMakeLists.txt
lessons/example_toy/ch5/: CMakeLists.txt
lessons/example_toy/ch5/toyc/: CMakeLists.txt
lessons/example_toy/ch6/: CMakeLists.txt
lessons/example_toy/ch6/toyc/: CMakeLists.txt  toyc.cpp
lessons/example_toy/ch7/: CMakeLists.txt
lessons/example_toy/ch7/toyc/: CMakeLists.txt  toyc.cpp
lessons/example_toy/sample/: canonicalization.toy
scripts/: init_standalone.py
(+59 files in other folders)
